# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: 2025 tjdeveng
#
# Application icons (optional - install if they exist)
# Note: Icons are optional for development, add them later for distribution

# icon_sizes = ['16', '32', '48', '64', '128']
#
# foreach size : icon_sizes
#   icon_path = 'hicolor' / size + 'x' + size / 'apps' / application_id + '.png'
#   if fs.exists(icon_path)
#     install_data(
#       icon_path,
#       install_dir: get_option('datadir') / 'icons' / 'hicolor' / size + 'x' + size / 'apps',
#     )
#   endif
# endforeach
#
# # Scalable icon (SVG)
# svg_icon = 'hicolor' / 'scalable' / 'apps' / application_id + '.svg'
# if fs.exists(svg_icon)
#   install_data(
#     svg_icon,
#     install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
#   )
# endif
